--- a/04_Problema_do_Produtor_Consumidor/view/main_view.fxml
+++ b/04_Problema_do_Produtor_Consumidor/view/main_view.fxml
@@ -38,7 +38,7 @@
             </ImageView>
          </children>
       </AnchorPane>
-      <AnchorPane fx:id="anchorPaneProducers" prefHeight="700.0" prefWidth="1200.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane fx:id="anchorPaneProducers" prefHeight="700.0" prefWidth="1200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <ImageView fitHeight="807.0" fitWidth="1557.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -50,17 +50,17 @@
                   <Image url="@../img/producers/oilRefinery.png" />
                </image>
             </ImageView>
-            <ImageView fx:id="imgRefinery2" fitHeight="250.0" fitWidth="235.0" layoutX="365.0" layoutY="297.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="imgRefinery2" fitHeight="250.0" fitWidth="235.0" layoutX="365.0" layoutY="297.0" pickOnBounds="true" preserveRatio="true" visible="false">
                <image>
                   <Image url="@../img/producers/oilRefinery.png" />
                </image>
             </ImageView>
-            <ImageView fx:id="imgRefinery3" fitHeight="225.0" fitWidth="235.0" layoutX="677.0" layoutY="368.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="imgRefinery3" fitHeight="225.0" fitWidth="235.0" layoutX="677.0" layoutY="368.0" pickOnBounds="true" preserveRatio="true" visible="false">
                <image>
                   <Image url="@../img/producers/oilRefinery.png" />
                </image>
             </ImageView>
-            <ImageView fx:id="imgRefinery4" fitHeight="225.0" fitWidth="305.0" layoutX="957.0" layoutY="302.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="imgRefinery4" fitHeight="225.0" fitWidth="305.0" layoutX="957.0" layoutY="302.0" pickOnBounds="true" preserveRatio="true" visible="false">
                <image>
                   <Image url="@../img/producers/oilRefinery.png" />
                </image>
@@ -75,17 +75,17 @@
                   <Image url="@../img/powerOff.png" />
                </image>
             </ImageView>
-            <ImageView fx:id="imgRefineryTurnOn2" fitHeight="62.0" fitWidth="32.0" layoutX="467.0" layoutY="176.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="imgRefineryTurnOn2" fitHeight="62.0" fitWidth="32.0" layoutX="467.0" layoutY="176.0" pickOnBounds="true" preserveRatio="true" visible="false">
                <image>
                   <Image url="@../img/powerOff.png" />
                </image>
             </ImageView>
-            <ImageView fx:id="imgRefineryTurnOn3" fitHeight="62.0" fitWidth="32.0" layoutX="758.0" layoutY="302.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="imgRefineryTurnOn3" fitHeight="62.0" fitWidth="32.0" layoutX="758.0" layoutY="302.0" pickOnBounds="true" preserveRatio="true" visible="false">
                <image>
                   <Image url="@../img/powerOff.png" />
                </image>
             </ImageView>
-            <ImageView fx:id="imgRefineryTurnOn4" fitHeight="62.0" fitWidth="32.0" layoutX="1053.0" layoutY="233.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="imgRefineryTurnOn4" fitHeight="62.0" fitWidth="32.0" layoutX="1053.0" layoutY="233.0" pickOnBounds="true" preserveRatio="true" visible="false">
                <image>
                   <Image url="@../img/powerOff.png" />
                </image>
@@ -110,7 +110,7 @@
                   <Image url="@../img/producers/loadingPing.png" />
                </image>
             </ImageView>
-            <ImageView fx:id="imgLoadingBar2" fitHeight="32.0" fitWidth="134.0" layoutX="416.0" layoutY="226.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="imgLoadingBar2" fitHeight="32.0" fitWidth="134.0" layoutX="416.0" layoutY="226.0" pickOnBounds="true" preserveRatio="true" visible="false">
                <image>
                   <Image url="@../img/producers/loadingBar.png" />
                </image>
@@ -130,7 +130,7 @@
                   <Image url="@../img/producers/loadingPing.png" />
                </image>
             </ImageView>
-            <ImageView fx:id="imgLoadingBar3" fitHeight="32.0" fitWidth="134.0" layoutX="707.0" layoutY="339.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="imgLoadingBar3" fitHeight="32.0" fitWidth="134.0" layoutX="707.0" layoutY="339.0" pickOnBounds="true" preserveRatio="true" visible="false">
                <image>
                   <Image url="@../img/producers/loadingBar.png" />
                </image>
@@ -150,7 +150,7 @@
                   <Image url="@../img/producers/loadingPing.png" />
                </image>
             </ImageView>
-            <ImageView fx:id="imgLoadingBar4" fitHeight="32.0" fitWidth="134.0" layoutX="1003.0" layoutY="273.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="imgLoadingBar4" fitHeight="32.0" fitWidth="134.0" layoutX="1003.0" layoutY="273.0" pickOnBounds="true" preserveRatio="true" visible="false">
                <image>
                   <Image url="@../img/producers/loadingBar.png" />
                </image>
@@ -171,17 +171,17 @@
                </image>
             </ImageView>
             <Button fx:id="buttonSpd11" layoutX="143.0" layoutY="132.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="32.0" style="-fx-background-color: #ffffff; -fx-border-color: black; -fx-background-radius: 10; -fx-border-radius: 10;" text="1" />
-            <Button fx:id="buttonSpd12" layoutX="194.0" layoutY="132.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="32.0" style="-fx-background-color: #ffffff; -fx-border-color: black; -fx-background-radius: 10; -fx-border-radius: 10;" text="2" />
-            <Button fx:id="buttonSpd13" layoutX="245.0" layoutY="132.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="32.0" style="-fx-background-color: #ffffff; -fx-border-color: black; -fx-background-radius: 10; -fx-border-radius: 10;" text="3" />
-            <Button fx:id="buttonSpd21" layoutX="416.0" layoutY="132.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="32.0" style="-fx-background-color: #ffffff; -fx-border-color: black; -fx-background-radius: 10; -fx-border-radius: 10;" text="1" />
-            <Button fx:id="buttonSpd22" layoutX="467.0" layoutY="132.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="32.0" style="-fx-background-color: #ffffff; -fx-border-color: black; -fx-background-radius: 10; -fx-border-radius: 10;" text="2" />
-            <Button fx:id="buttonSpd23" layoutX="518.0" layoutY="132.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="32.0" style="-fx-background-color: #ffffff; -fx-border-color: black; -fx-background-radius: 10; -fx-border-radius: 10;" text="3" />
-            <Button fx:id="buttonSpd31" layoutX="707.0" layoutY="259.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="32.0" style="-fx-background-color: #ffffff; -fx-border-color: black; -fx-background-radius: 10; -fx-border-radius: 10;" text="1" />
-            <Button fx:id="buttonSpd32" layoutX="758.0" layoutY="259.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="32.0" style="-fx-background-color: #ffffff; -fx-border-color: black; -fx-background-radius: 10; -fx-border-radius: 10;" text="2" />
-            <Button fx:id="buttonSpd33" layoutX="809.0" layoutY="259.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="32.0" style="-fx-background-color: #ffffff; -fx-border-color: black; -fx-background-radius: 10; -fx-border-radius: 10;" text="3" />
-            <Button fx:id="buttonSpd41" layoutX="1003.0" layoutY="192.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="32.0" style="-fx-background-color: #ffffff; -fx-border-color: black; -fx-background-radius: 10; -fx-border-radius: 10;" text="1" />
-            <Button fx:id="buttonSpd42" layoutX="1054.0" layoutY="192.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="32.0" style="-fx-background-color: #ffffff; -fx-border-color: black; -fx-background-radius: 10; -fx-border-radius: 10;" text="2" />
-            <Button fx:id="buttonSpd43" layoutX="1105.0" layoutY="194.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="32.0" style="-fx-background-color: #ffffff; -fx-border-color: black; -fx-background-radius: 10; -fx-border-radius: 10;" text="3" />
+            <Button fx:id="buttonSpd12" layoutX="194.0" layoutY="132.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="32.0" style="-fx-background-color: #ffffff; -fx-border-color: black; -fx-background-radius: 10; -fx-border-radius: 10;" text="2" visible="false" />
+            <Button fx:id="buttonSpd13" layoutX="245.0" layoutY="132.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="32.0" style="-fx-background-color: #ffffff; -fx-border-color: black; -fx-background-radius: 10; -fx-border-radius: 10;" text="3" visible="false" />
+            <Button fx:id="buttonSpd21" layoutX="416.0" layoutY="132.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="32.0" style="-fx-background-color: #ffffff; -fx-border-color: black; -fx-background-radius: 10; -fx-border-radius: 10;" text="1" visible="false" />
+            <Button fx:id="buttonSpd22" layoutX="467.0" layoutY="132.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="32.0" style="-fx-background-color: #ffffff; -fx-border-color: black; -fx-background-radius: 10; -fx-border-radius: 10;" text="2" visible="false" />
+            <Button fx:id="buttonSpd23" layoutX="518.0" layoutY="132.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="32.0" style="-fx-background-color: #ffffff; -fx-border-color: black; -fx-background-radius: 10; -fx-border-radius: 10;" text="3" visible="false" />
+            <Button fx:id="buttonSpd31" layoutX="707.0" layoutY="259.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="32.0" style="-fx-background-color: #ffffff; -fx-border-color: black; -fx-background-radius: 10; -fx-border-radius: 10;" text="1" visible="false" />
+            <Button fx:id="buttonSpd32" layoutX="758.0" layoutY="259.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="32.0" style="-fx-background-color: #ffffff; -fx-border-color: black; -fx-background-radius: 10; -fx-border-radius: 10;" text="2" visible="false" />
+            <Button fx:id="buttonSpd33" layoutX="809.0" layoutY="259.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="32.0" style="-fx-background-color: #ffffff; -fx-border-color: black; -fx-background-radius: 10; -fx-border-radius: 10;" text="3" visible="false" />
+            <Button fx:id="buttonSpd41" layoutX="1003.0" layoutY="192.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="32.0" style="-fx-background-color: #ffffff; -fx-border-color: black; -fx-background-radius: 10; -fx-border-radius: 10;" text="1" visible="false" />
+            <Button fx:id="buttonSpd42" layoutX="1054.0" layoutY="192.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="32.0" style="-fx-background-color: #ffffff; -fx-border-color: black; -fx-background-radius: 10; -fx-border-radius: 10;" text="2" visible="false" />
+            <Button fx:id="buttonSpd43" layoutX="1105.0" layoutY="194.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="32.0" style="-fx-background-color: #ffffff; -fx-border-color: black; -fx-background-radius: 10; -fx-border-radius: 10;" text="3" visible="false" />
          </children></AnchorPane>
       <AnchorPane fx:id="anchorPaneConsumers" prefHeight="700.0" prefWidth="1200.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -190,17 +190,17 @@
                   <Image url="@../img/consumers/background.png" />
                </image>
             </ImageView>
-            <ImageView fx:id="imgCar1" fitHeight="150.0" fitWidth="200.0" layoutX="514.0" layoutY="330.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="imgCar1" fitHeight="150.0" fitWidth="200.0" layoutX="514.0" layoutY="330.0" pickOnBounds="true" preserveRatio="true" visible="false">
                <image>
                   <Image url="@../img/consumers/blueCar.png" />
                </image>
             </ImageView>
-            <ImageView fx:id="imgCar2" fitHeight="150.0" fitWidth="200.0" layoutX="653.0" layoutY="396.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="imgCar2" fitHeight="150.0" fitWidth="200.0" layoutX="653.0" layoutY="396.0" pickOnBounds="true" preserveRatio="true" visible="false">
                <image>
                   <Image url="@../img/consumers/redCar.png" />
                </image>
             </ImageView>
-            <ImageView fx:id="imgCar3" fitHeight="150.0" fitWidth="200.0" layoutX="784.0" layoutY="481.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="imgCar3" fitHeight="150.0" fitWidth="200.0" layoutX="784.0" layoutY="481.0" pickOnBounds="true" preserveRatio="true" visible="false">
                <image>
                   <Image url="@../img/consumers/blueCar.png" />
                </image>
@@ -220,19 +220,19 @@
                   <Image url="@../img/powerOff.png" />
                </image>
             </ImageView>
-            <ImageView fx:id="imgGasTurnOn2" fitHeight="62.0" fitWidth="32.0" layoutX="791.0" layoutY="222.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="imgGasTurnOn2" fitHeight="62.0" fitWidth="32.0" layoutX="791.0" layoutY="222.0" pickOnBounds="true" preserveRatio="true" visible="false">
                <image>
                   <Image url="@../img/powerOff.png" />
                </image>
             </ImageView>
-            <ImageView fx:id="imgGasTurnOn3" fitHeight="62.0" fitWidth="32.0" layoutX="921.0" layoutY="298.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="imgGasTurnOn3" fitHeight="62.0" fitWidth="32.0" layoutX="921.0" layoutY="298.0" pickOnBounds="true" preserveRatio="true" visible="false">
                <image>
                   <Image url="@../img/powerOff.png" />
                </image>
             </ImageView>
          </children>
       </AnchorPane>
-      <AnchorPane fx:id="anchorPaneShop" prefHeight="700.0" prefWidth="1200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane fx:id="anchorPaneShop" prefHeight="700.0" prefWidth="1200.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <ImageView fitHeight="763.0" fitWidth="1530.0" layoutX="-208.0" layoutY="-8.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -251,7 +251,7 @@
             </ImageView>
             <Label fx:id="labelShopText" alignment="TOP_LEFT" contentDisplay="RIGHT" layoutX="507.0" layoutY="479.0" prefHeight="199.0" prefWidth="533.0" wrapText="true">
                <font>
-                  <Font size="18.0" />
+                  <Font name="System Bold" size="18.0" />
                </font>
             </Label>
             <ImageView fx:id="imgGas" fitHeight="150.0" fitWidth="200.0" layoutX="52.0" layoutY="38.0" pickOnBounds="true" preserveRatio="true">
